Added a comment to the index page and also changed maven to get later wildfly plugin and also set the jboss home folder

--- a/version_1/src/main/webapp/index.html
+++ b/version_1/src/main/webapp/index.html
@@ -7,6 +7,6 @@
 <body>
 
     <h1>Java EE - Tabella Application Version 1</h1>
-
+    <p>This is a simple war file that has a single index.html file but is built via maven</p>
 </body>
 </html>
