--- a/version_2/src/main/webapp/index.html
+++ b/version_2/src/main/webapp/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"
           integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
+    <link href="css/theme.css" rel="stylesheet" />
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -22,10 +24,18 @@
     <![endif]-->
 </head>
 
-<body>
+<body role="document">
 
-    <h1>Java EE - Tabella Application Version 2</h1>
-    <p>This version starts to ise the bootstrap theme to provide a better front end</p>
+    <div class="container theme-showcase" role="main">
+
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron">
+            <h1>Tabella Example Two</h1>
+            <p>This is a show case system that shows the pages that could be deployed for the Tabella system</p>
+            <p>thymeleaf has been added to the project to replace the jsp files</p>
+            <a href="home" role="button" class="btn btn-lg btn-primary">Try Tabella</a>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
